# openglbook-samples

chapter-1/: CMakeLists.txt  chapter.1.1.c  chapter.1.2.c
chapter-2/: CMakeLists.txt  chapter.2.1.c
chapter-3/: CMakeLists.txt
